--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "portkey",
+    "name": "PortKey",
     "slug": "portkey",
     "version": "1.0.0",
     "orientation": "portrait",
